# rs-file-sorter

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  installer.iss
.github/workflows/: create-release.yml
docs/: semantic_grouping.md
src/: lib.rs  main.rs  sorter.rs
src/cli/: error.rs  mod.rs  sort_command.rs
src/cli/cli_handler/: cli_handler.rs  cli_handler_builder.rs  compound_structs.rs  parser.rs  tests.rs
src/cli_handler/: cli_handler.rs  cli_handler_builder.rs  compound_structs.rs  mod.rs  parser.rs  tests.rs
src/commands/: mod.rs  sort_command.rs
src/core/: context.rs  error.rs  mod.rs  options.rs  parameter.rs  report.rs  sorter.rs  sorting_strategy.rs  strategy.rs  strategy_parameter.rs  strategy_validator.rs
src/core/error/: mod.rs  strategy_validator_error.rs
src/core/pipeline/: apply_context_stage.rs  apply_strategies_stage.rs  apply_transformation_stage.rs  check_dry_run_stage.rs  (+5 more)
src/sortering_strategies/: mod.rs  month_sorting_strategy.rs  sorter.rs  sorting_strategy.rs  sorting_strategy_list.rs  year_month_sotring_strategy.rs  year_sorting_strategy.rs
src/sorting_strategies/: all_catalog.rs  analysis_catalog.rs  catalog.rs  concat_strategy.rs  manipulation_catalog.rs  metadata_catalog.rs  mod.rs  month_sorting_strategy.rs  sorter.rs  sorting_strategy_list.rs  strategy_catalog.rs  utils.rs  year_sorting_strategy.rs
src/ui/: custom_theme.rs  file_sorter_app.rs  mod.rs  settings.rs  widgets.rs
src/utils/: file_manipulator.rs  logger.rs  mod.rs  string_manipulator.rs  tests.rs  time_manipulator.rs
tests/: test_e2e_exec_sort_command.rs  test_e2e_sort_command.rs  test_e2e_sorter_year_month.rs
tests/common/: mod.rs
(+71 files in other folders)
