[package]
name = "rs-file-sorter"
version = "0.1.0"
edition = "2021"
test = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
filetime = "0.2.22"
regex = "1.10.2"
rsft-utils = { git = "https://github.com/E-Jacques/rsft-utils" }
