[package]
name = "rs-file-sorter"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rsfs-cli"
path = "src/bin/rsfs_cli.rs"

[[bin]]
name = "rsfs-app"
path = "src/bin/rsfs_app.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["unstable-locales"] }
filetime = "0.2.22"
iced = { version = "0.13.1", features = ["advanced"] }
rand = "0.9.1"
regex = "1.10.2"
rfd = "0.15.3"
rsft-utils = { git = "https://github.com/E-Jacques/rsft-utils" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempdir = "0.3.7"
walkdir = "2.5.0"

[target.'cfg(windows)'.dependencies]
image = "0.24.6"
